--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7,7 +7,7 @@
 html, body {
   height: 100%;
   font-family: Helvetica, sans-serif;
-  overflow: hidden;
+  overflow: auto;
   background: black;
 }
 
