--- a/css/mains.css
+++ b/css/mains.css
@@ -8,7 +8,7 @@ html, body {
   height: 100%;
   font-family: Helvetica, sans-serif;
   overflow: hidden;
-  background: black;
+  background: none !important;
 }
 
 #background-video {
