--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -8,7 +8,7 @@ html, body {
   height: 100%;
   font-family: Helvetica, sans-serif;
   overflow: auto;
-  background: black;
+  background: none !important;
 }
 
 #app {
